--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@rive-app/react-native": "^0.1.2",
     "expo": "~54.0.29",
     "expo-av": "^16.0.8",
     "expo-calendar": "^15.0.8",
